--- a/Code/index.html
+++ b/Code/index.html
@@ -1,1 +1,15 @@
-The page.... riviting I know...
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Internship Search</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="Myles Gavic" content="SitePoint">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+</head>
+
+<body>
+  Hello World!
+  <script src="js/scripts.js"></script>
+</body>
+</html>
